2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl:
	  Added BANK_MAX value (for pic16(l)f18855, pic16(l)f18875).

2015-12-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl:
	  Fix the Microchip bug of the 18f47k40 and 18lf47k40 devices:
	  nDEBUG, nXINST

2015-12-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl:
	  Fix the Microchip bug of the 18f47k40 and 18lf47k40 devices:
	  nDEBUG, nXINST

2015-12-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh, tools/device-help.pl, tools/device-manager.pl:
	  Use "IDLOCS CODE" in the --mpasm-compatible mode.

2015-11-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Updated based on the mplabx-3.15.

2015-11-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cmp_gp_mp.sh:
	  Updated the diff capabilities.

2015-11-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Added the missing DEBUG config option to these MCUs. 2.)
	  (pic16(l)f18855, pic16(l)f18875)

2015-11-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Added the missing DEBUG config option to these MCUs.
	  (pic16(l)f18855, pic16(l)f18875)

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Added an example to the generated p16f1xxx.inc.gen and
	  p18cxxx.inc.gen files.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Minor changes.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Updated based on the mplabx-3.10.

2015-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>